<resources>
    <string name="app_name">DemoApp</string>
    <string name="submit">Submit</string>
    <string name="login">Login</string>
    <string name="enter_username">Username</string>
    <string name="enter_password">Password</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>


    <string name="books">Books</string>
    <string name="clothing">Clothing</string>
    <string name="electronics">Electronics</string>
    <string name="grocery">Grocery</string>
    <string name="sports">Sports</string>
    <string name="add_product">Add Product</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="title_activity_cart">CartActivity</string>

</resources>
